Week_6/day_1/three-tier-app/3-tier-application-main/eks-manifests/backend-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: jenagan/basic3tier-backend:latest
        ports:
        - containerPort: 5000
