Week_6/day_1/three-tier-app/3-tier-application-main/eks-manifests/frontend-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: jenagan/basic3tier-frontend:latest
        ports:
        - containerPort: 80
