Week_6/day_1/three-tier-app/3-tier-application-main/eks-manifests/backend-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30090
  type: NodePort
